--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     commands:
-      - echo no install step
+      - sudo apt-get install zip
   pre_build:
     commands:
       - echo no pre_build step
